--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -24,39 +24,12 @@ jobs:
         run: |
           brew install pandoc
 
-      - name: Query dependencies
+      - name: Build design specification
         run: |
-          install.packages('remotes')
-          saveRDS(remotes::dev_package_deps(dependencies = TRUE), ".github/depends.Rds", version = 2)
-          writeLines(sprintf("R-%i.%i", getRversion()$major, getRversion()$minor), ".github/R-version")
-        shell: Rscript {0}
-
-      - name: Cache R packages
-        uses: actions/cache@v4.1.2
-        with:
-          path: ${{ env.R_LIBS_USER }}
-          key: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-2-${{ hashFiles('.github/depends.Rds') }}
-          restore-keys: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-2-
-
-      - name: Install dependencies
-        run: |
-          install.packages(c("remotes"))
-          remotes::install_deps(dependencies = TRUE)
-          remotes::install_cran("covr")
-        shell: Rscript {0}
-
-      - name: Cache bookdown results
-        uses: actions/cache@v4.1.2
-        with:
-          path: _bookdown_files
-          key: bookdown-${{ hashFiles('**/*Rmd') }}
-          restore-keys: bookdown-
-
-      - name: Build manual
-        run: |
+          install.packages("bookdown")
           bookdown::render_book(input = "index.Rmd", output_format = "bookdown::gitbook")
         shell: Rscript {0}
 
-      - name: Publish manual
+      - name: Publish design specification
         run: |
           ./inst/publish.sh
